# hoppinworld

./: Cargo.toml  build_linux.sh
assets/: LICENSE  README.md  colors.txt
assets/video/: bhoptutorial.txt
client/: Cargo.toml
client/assets/base/config/: display.ron
client/assets/base/prefabs/: gameplay_ui.ron  login_ui.ron  map_select_ui.ron  menu_ui.ron  pause_ui.ron  result_ui.ron
client/src/: main.rs
client/src/state/: gameplay.rs  init.rs  login.rs  main_menu.rs  map_load.rs  map_select.rs  pause.rs  result.rs
client/src/system/: contact_system.rs  ui.rs
client/src/util/: discord.rs  file.rs  http.rs  mod.rs
data/: Cargo.toml
data/src/: lib.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
runtime/src/component/: collider.rs  mod.rs  removalid.rs  tags.rs
runtime/src/resource/: mod.rs  runtime_progress.rs  runtime_stats.rs
runtime/src/system/: mod.rs  player_feet_sync.rs
runtime/src/util/: aliases.rs  events.rs  map.rs  mod.rs  player_settings.rs
