[package]
name = "hoppinworld_runtime"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
amethyst-extra = { git = "https://github.com/jojolepro/amethyst-extra", branch = "hoppinworld" }
hoppinworld_data = { path = "../data" }
hyper = "0.12.11"
hyper-tls = "0.3.1"
tokio = "0.1.7"
tokio-executor = "0.1.0"
serde = { version = "1", features = ["serde_derive"] }
log = "0.4"
winit = "0.17.0"
partial_function = "0.4.0"
derive-new = "0.5"
uuid = { version = "0.7.1", features = ["v4", "serde"] }
ron = "0.4"
lazy_static = "1.2"
half_matrix = "0.2"
serde_json = "1.0.32"

